make file and other files are updated

--- a/Daniel-Cuevas-HW-1/src/Makefile
+++ b/Daniel-Cuevas-HW-1/src/Makefile
@@ -5,14 +5,14 @@ JC = javac
 .java.class:
 	$(JC) $(JFLAGS) $*.java
 CLASSES = \
-	Ant.java \
-	Bat.java \
-	Creature.java \
-	Fly.java \
-	Flyer.java \
-	TestCreature.java \
 	Thing.java \
-	Tiger.java 
+	Creature.java \
+	Ant.java \
+	Flyer.java \
+	Bat.java \
+	Fly.java \
+	Tiger.java \
+	TestCreature.java
 
 default: classes
 
@@ -20,3 +20,8 @@ classes: $(CLASSES:.java=.class)
 
 clean:
 	$(RM) *.class
+
+java: 
+	sudo apt-get update
+	sudo apt-get install default-jre
+	sudo apt-get install default-jdk
