--- a/Daniel-Cuevas-HW-1/src/Makefile
+++ b/Daniel-Cuevas-HW-1/src/Makefile
@@ -25,3 +25,9 @@ java:
 	sudo apt-get update
 	sudo apt-get install default-jre
 	sudo apt-get install default-jdk
+
+all: 
+	sudo apt-get update
+	sudo apt-get install default-jre
+	sudo apt-get install default-jdk
+	classes
