--- a/Daniel-Cuevas-HW-1/src/Makefile
+++ b/Daniel-Cuevas-HW-1/src/Makefile
@@ -30,4 +30,5 @@ all:
 	sudo apt-get update
 	sudo apt-get install default-jre
 	sudo apt-get install default-jdk
-	$(CLASSES:.java=.class)
+	classes
+	java TestCreature
