--- a/Daniel-Cuevas-HW-1/src/Makefile
+++ b/Daniel-Cuevas-HW-1/src/Makefile
@@ -14,8 +14,7 @@ CLASSES = \
 	Tiger.java \
 	TestCreature.java
 
-default: 
-	classes
+default: classes
 	java TestCreature
 
 classes: $(CLASSES:.java=.class)
