mvn clean doesn't work well with ubuntu, forget the clean build and make it compile every time you run make clean

--- a/VIN-Cuevas/Makefile
+++ b/VIN-Cuevas/Makefile
@@ -6,10 +6,10 @@ JC = javac
 	$(JC) $(JFLAGS) $*.java
 
 default: 
-	mvn clean compile exec:java
+	mvn compile exec:java
 	
 clean:
-	mvn clean
+	mvn compile
 
 java: 
 	sudo apt-get update
