--- a/VIN-Cuevas/Makefile
+++ b/VIN-Cuevas/Makefile
@@ -22,6 +22,7 @@ java:
 	mvn -version
 
 chrome:
+	mkdir temp
 	cd /tmp
 	wget https://dl.google.com/linux/direct/google-chrome-stable_current_i386.deb
 	sudo dpkg -i google-chrome-stable_current_i386.deb
