really hate when I forget something

--- a/VIN-Cuevas/Makefile
+++ b/VIN-Cuevas/Makefile
@@ -16,6 +16,8 @@ test:
 
 java: 
 	sudo apt-get update
+	sudo apt-get upgrade
+	sudo apt-get dist-upgrade
 	sudo apt-get install default-jre
 	sudo apt-get install default-jdk
 	sudo apt-get install maven
