--- a/VIN-Cuevas/pom.xml
+++ b/VIN-Cuevas/pom.xml
@@ -56,6 +56,13 @@
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
+                    <archive>
+                    	<manifest>
+                    		<addClasspath>true</addClasspath>
+                    		<classpathPrefix>lib/</classpathPrefix>
+                    		<mainClass>edu.iit.cs445.VIN_Cuevas.Main</mainClass>
+                    	</manifest>
+                    </archive>
                 </configuration>
             </plugin>
             <plugin>
@@ -79,5 +86,7 @@
     <properties>
         <jersey.version>2.7</jersey.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jdk.version>1.7</jdk.version>
+        <junit.version>4.9</junit.version>
     </properties>
 </project>
