--- a/VIN-Cuevas/pom.xml
+++ b/VIN-Cuevas/pom.xml
@@ -65,6 +65,37 @@
                     </archive>
                 </configuration>
             </plugin>
+            <!-- <plugin>
+            	<groupId>org.apache.maven.plugins</groupId>
+            	<artifactId>maven-shade-plugin</artifactId>
+            	<version>2.4</version>
+            	<executions>
+            		<execution>
+            			<phase>package</phase>
+            			<goals>
+            				<goal>shade</goal>
+            			</goals>
+            			<configuration>
+				            <transformers> 
+				            	<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+				            		<mainClass>edu.iit.cs445.VIN_Cuevas.Main</mainClass>
+				            	</transformer>
+				            </transformers>
+				          	<minimizeJar>true</minimizeJar>
+				          	<filters>
+						        <filter>
+						            <artifact>*:*</artifact>
+						            <excludes>
+						                <exclude>META-INF/*.SF</exclude>
+						                <exclude>META-INF/*.DSA</exclude>
+						                <exclude>META-INF/*.RSA</exclude>
+						            </excludes>
+						        </filter>
+						    </filters>
+            			</configuration>
+            		</execution>
+            	</executions>
+            </plugin> -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
